--- a/packages/playable-ads-adapter/package.json
+++ b/packages/playable-ads-adapter/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0",
+  "version": "1.1.0",
   "name": "playable-ads-adapter",
   "main": "./main.js",
   "devDependencies": {
@@ -26,6 +26,7 @@
     "watch:3x": "pnpm watch --environment BUILD_VERSION:3x"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "cheerio": "1.0.0-rc.12",
     "jszip": "^3.10.1",
     "mime-types": "^2.1.35",
