refactor(playable-ads-adapter): refactor the root config

--- a/packages/playable-ads-adapter/tsconfig.json
+++ b/packages/playable-ads-adapter/tsconfig.json
@@ -11,7 +11,12 @@
     "typeRoots": [
       "node_modules/@types",
       "/@types"
-    ]
+    ],
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["./src/*"],
+      "~types/*": ["./@types/*"]
+    }
   },
   "include": ["src/**/*.ts", "@types/*.ts"]
 }
