--- a/packages/playable-ads-adapter/package.json
+++ b/packages/playable-ads-adapter/package.json
@@ -3,16 +3,18 @@
   "name": "playable-ads-adapter",
   "main": "./main.js",
   "devDependencies": {
+    "@rollup/plugin-alias": "^4.0.2",
     "@rollup/plugin-commonjs": "^23.0.0",
     "@rollup/plugin-json": "^5.0.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@rollup/plugin-replace": "^5.0.0",
+    "@rollup/plugin-terser": "^0.1.0",
+    "@rollup/plugin-typescript": "^9.0.2",
     "@types/mime-types": "^2.1.1",
     "@types/node": "^18.8.4",
     "is-builtin-module": "^3.2.0",
     "rollup": "^2.79.1",
     "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-esbuild": "^4.10.1",
     "typescript": "^4.8.4",
     "uglify-js": "^3.17.4"
   },
